@@ -1,19 +1,19 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2009, Sun Microsystems, Inc., Kohsuke Kawaguchi, Yahoo! Inc., Seiji Sogabe,
  *                          Andrew Bayer
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -28,13 +28,12 @@ package hudson.model;
 import static java.util.concurrent.TimeUnit.DAYS;
 import static java.util.concurrent.TimeUnit.HOURS;
 import static java.util.concurrent.TimeUnit.SECONDS;
-import static jenkins.util.MemoryReductionUtil.EMPTY_STRING_ARRAY;
 import static jenkins.util.MemoryReductionUtil.getPresizedMutableMap;
-import static jenkins.util.MemoryReductionUtil.internInPlace;
 
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.ExtensionList;
 import hudson.PluginManager;
 import hudson.PluginWrapper;
@@ -45,12 +44,12 @@ import hudson.util.FormValidation;
 import hudson.util.HttpResponses;
 import hudson.util.TextFile;
 import hudson.util.VersionNumber;
-import io.jenkins.lib.versionnumber.JavaSpecificationVersion;
 import java.io.File;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -79,8 +78,8 @@ import jenkins.plugins.DetachedPluginsUtil;
 import jenkins.security.UpdateSiteWarningsConfiguration;
 import jenkins.security.UpdateSiteWarningsMonitor;
 import jenkins.util.JSONSignatureValidator;
+import jenkins.util.PluginLabelUtil;
 import jenkins.util.SystemProperties;
-import jenkins.util.java.JavaUtils;
 import net.sf.json.JSONArray;
 import net.sf.json.JSONException;
 import net.sf.json.JSONObject;
@@ -216,9 +215,9 @@ public class UpdateSite {
 
     @Restricted(NoExternalUse.class)
     public @NonNull FormValidation updateDirectlyNow(boolean signatureCheck) throws IOException {
-        return updateData(DownloadService.loadJSON(new URL(getUrl() + "?id=" + URLEncoder.encode(getId(), "UTF-8") + "&version=" + URLEncoder.encode(Jenkins.VERSION, "UTF-8"))), signatureCheck);
+        return updateData(DownloadService.loadJSON(new URL(getUrl() + "?id=" + URLEncoder.encode(getId(), StandardCharsets.UTF_8) + "&version=" + URLEncoder.encode(Jenkins.VERSION, StandardCharsets.UTF_8))), signatureCheck);
     }
-    
+
     private FormValidation updateData(String json, boolean signatureCheck)
             throws IOException {
 
@@ -237,7 +236,7 @@ public class UpdateSite {
 
         if (signatureCheck) {
             FormValidation e = verifySignatureInternal(o);
-            if (e.kind!=FormValidation.Kind.OK) {
+            if (e.kind != FormValidation.Kind.OK) {
                 LOGGER.severe(e.toString());
                 return e;
             }
@@ -289,7 +288,7 @@ public class UpdateSite {
 
     /**
      * Let sub-classes of UpdateSite provide their own signature validator.
-     * @param name, the name for the JSON signature Validator object.
+     * @param name the name for the JSON signature Validator object.
      *              if name is null, then the default name will be used,
      *              which is "update site" followed by the update site id
      * @return the signature validator.
@@ -307,17 +306,17 @@ public class UpdateSite {
      * Returns true if it's time for us to check for new version.
      */
     public synchronized boolean isDue() {
-        if(neverUpdate)     return false;
-        if(dataTimestamp == 0)
+        if (neverUpdate)     return false;
+        if (dataTimestamp == 0)
             dataTimestamp = getDataFile().file.lastModified();
         long now = System.currentTimeMillis();
 
-        retryWindow = Math.max(retryWindow,SECONDS.toMillis(15));
-        
+        retryWindow = Math.max(retryWindow, SECONDS.toMillis(15));
+
         boolean due = now - dataTimestamp > DAY && now - lastAttempt > retryWindow;
-        if(due) {
+        if (due) {
             lastAttempt = now;
-            retryWindow = Math.min(retryWindow*2, HOURS.toMillis(1)); // exponential back off but at most 1 hour
+            retryWindow = Math.min(retryWindow * 2, HOURS.toMillis(1)); // exponential back off but at most 1 hour
         }
         return due;
     }
@@ -364,15 +363,19 @@ public class UpdateSite {
      */
     public JSONObject getJSONObject() {
         TextFile df = getDataFile();
-        if(df.exists()) {
+        if (df.exists()) {
             long start = System.nanoTime();
             try {
                 JSONObject o = JSONObject.fromObject(df.read());
                 LOGGER.fine(() -> String.format("Loaded and parsed %s in %.01fs", df, (System.nanoTime() - start) / 1_000_000_000.0));
                 return o;
             } catch (JSONException | IOException e) {
-                LOGGER.log(Level.SEVERE,"Failed to parse "+df,e);
-                df.delete(); // if we keep this file, it will cause repeated failures
+                LOGGER.log(Level.SEVERE, "Failed to parse " + df, e);
+                try {
+                    df.delete(); // if we keep this file, it will cause repeated failures
+                } catch (IOException e2) {
+                    LOGGER.log(Level.SEVERE, "Failed to delete " + df, e2);
+                }
                 return null;
             }
         } else {
@@ -388,9 +391,9 @@ public class UpdateSite {
     public List<Plugin> getAvailables() {
         List<Plugin> r = new ArrayList<>();
         Data data = getData();
-        if(data==null)     return Collections.emptyList();
+        if (data == null)     return Collections.emptyList();
         for (Plugin p : data.plugins.values()) {
-            if(p.getInstalled()==null)
+            if (p.getInstalled() == null)
                 r.add(p);
         }
         r.sort((plugin, t1) -> {
@@ -415,7 +418,7 @@ public class UpdateSite {
     @CheckForNull
     public Plugin getPlugin(String artifactId) {
         Data dt = getData();
-        if(dt==null)    return null;
+        if (dt == null)    return null;
         return dt.plugins.get(artifactId);
     }
 
@@ -431,7 +434,7 @@ public class UpdateSite {
     @CheckForNull
     public String getConnectionCheckUrl() {
         Data dt = getData();
-        if(dt==null)    return "http://www.google.com/";
+        if (dt == null)    return "http://www.google.com/";
         return dt.connectionCheckUrl;
     }
 
@@ -440,9 +443,9 @@ public class UpdateSite {
      */
     private TextFile getDataFile() {
         return new TextFile(new File(Jenkins.get().getRootDir(),
-                                     "updates/" + getId()+".json"));
+                                     "updates/" + getId() + ".json"));
     }
-    
+
     /**
      * Returns the list of plugins that are updates to currently installed ones.
      *
@@ -452,35 +455,35 @@ public class UpdateSite {
     @Exported
     public List<Plugin> getUpdates() {
         Data data = getData();
-        if(data==null)      return Collections.emptyList(); // fail to determine
-        
+        if (data == null)      return Collections.emptyList(); // fail to determine
+
         List<Plugin> r = new ArrayList<>();
         for (PluginWrapper pw : Jenkins.get().getPluginManager().getPlugins()) {
             Plugin p = pw.getUpdateInfo();
-            if(p!=null) r.add(p);
+            if (p != null) r.add(p);
         }
-        
+
         return r;
     }
-    
+
     /**
      * Does any of the plugin has updates?
      */
     @Exported
     public boolean hasUpdates() {
         Data data = getData();
-        if(data==null)      return false;
-        
+        if (data == null)      return false;
+
         for (PluginWrapper pw : Jenkins.get().getPluginManager().getPlugins()) {
-            if(!pw.isBundled() && pw.getUpdateInfo()!=null)
+            if (!pw.isBundled() && pw.getUpdateInfo() != null)
                 // do not advertize updates to bundled plugins, since we generally want users to get them
-                // as a part of jenkins.war updates. This also avoids unnecessary pinning of plugins. 
+                // as a part of jenkins.war updates. This also avoids unnecessary pinning of plugins.
                 return true;
         }
         return false;
     }
-    
-    
+
+
     /**
      * Exposed to get rid of hardcoding of the URL that serves up update-center.json
      * in JavaScript.
@@ -493,7 +496,7 @@ public class UpdateSite {
 
     /**
      * URL which exposes the metadata location in a specific update site.
-     * @param downloadable, the downloadable id of a specific metatadata json (e.g. hudson.tasks.Maven.MavenInstaller.json)
+     * @param downloadable the downloadable id of a specific metatadata json (e.g. hudson.tasks.Maven.MavenInstaller.json)
      * @return the location
      * @since 2.20
      */
@@ -525,17 +528,14 @@ public class UpdateSite {
 
     /**
      * Is this the legacy default update center site?
+     * @deprecated
+     *      Will be removed, currently returns always false.
+     * @since 2.343
      */
+    @Deprecated
+    @Restricted(NoExternalUse.class)
     public boolean isLegacyDefault() {
-        return isHudsonCI() || isUpdatesFromHudsonLabs();
-    }
-
-    private boolean isHudsonCI() {
-        return url != null && UpdateCenter.PREDEFINED_UPDATE_SITE_ID.equals(id) && url.startsWith("http://hudson-ci.org/");
-    }
-
-    private boolean isUpdatesFromHudsonLabs() {
-        return url != null && url.startsWith("http://updates.hudson-labs.org/");
+        return false;
     }
 
     /**
@@ -554,7 +554,7 @@ public class UpdateSite {
         /**
          * Plugins in the repository, keyed by their artifact IDs.
          */
-        public final Map<String,Plugin> plugins = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
+        public final Map<String, Plugin> plugins = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
         /**
          * List of warnings (mostly security) published with the update site.
          *
@@ -576,9 +576,9 @@ public class UpdateSite {
         public final String connectionCheckUrl;
 
         Data(JSONObject o) {
-            this.sourceId = Util.intern((String)o.get("id"));
+            this.sourceId = Util.intern((String) o.get("id"));
             JSONObject c = o.optJSONObject("core");
-            if (c!=null) {
+            if (c != null) {
                 core = new Entry(sourceId, c, url);
             } else {
                 core = null;
@@ -613,13 +613,13 @@ public class UpdateSite {
                 }
             }
 
-            for(Map.Entry<String,JSONObject> e : (Set<Map.Entry<String,JSONObject>>)o.getJSONObject("plugins").entrySet()) {
+            for (Map.Entry<String, JSONObject> e : (Set<Map.Entry<String, JSONObject>>) o.getJSONObject("plugins").entrySet()) {
                 Plugin p = new Plugin(sourceId, e.getValue());
                 // JENKINS-33308 - include implied dependencies for older plugins that may need them
                 List<PluginWrapper.Dependency> implicitDeps = DetachedPluginsUtil.getImpliedDependencies(p.name, p.requiredCore);
-                if(!implicitDeps.isEmpty()) {
-                    for(PluginWrapper.Dependency dep : implicitDeps) {
-                        if(!p.dependencies.containsKey(dep.shortName)) {
+                if (!implicitDeps.isEmpty()) {
+                    for (PluginWrapper.Dependency dep : implicitDeps) {
+                        if (!p.dependencies.containsKey(dep.shortName)) {
                             p.dependencies.put(dep.shortName, dep.version);
                         }
                     }
@@ -635,7 +635,7 @@ public class UpdateSite {
                 }
             }
 
-            connectionCheckUrl = (String)o.get("connectionCheckUrl");
+            connectionCheckUrl = (String) o.get("connectionCheckUrl");
         }
 
         /**
@@ -697,6 +697,10 @@ public class UpdateSite {
         @Exported
         public final String url;
 
+        /**
+         * Size of the file in bytes, or {@code null} if unknown.
+         */
+        private final Long size;
 
         // non-private, non-final for test
         @Restricted(NoExternalUse.class)
@@ -722,6 +726,12 @@ public class UpdateSite {
             this.sha1 = Util.fixEmptyAndTrim(o.optString("sha1"));
             this.sha256 = Util.fixEmptyAndTrim(o.optString("sha256"));
             this.sha512 = Util.fixEmptyAndTrim(o.optString("sha512"));
+
+            Long fileSize = null;
+            if (o.has("size")) {
+                fileSize = o.getLong("size");
+            }
+            this.size = fileSize;
 
             String url = o.getString("url");
             if (!URI.create(url).isAbsolute()) {
@@ -783,6 +793,17 @@ public class UpdateSite {
             return new Api(this);
         }
 
+        /**
+         * Size of the file being advertised in bytes, or {@code null} if unspecified/unknown.
+         * @return size of the file if known, {@code null} otherwise.
+         *
+         * @since 2.325
+         */
+        // @Exported -- TODO unsure
+        @Restricted(NoExternalUse.class)
+        public Long getFileSize() {
+            return size;
+        }
     }
 
     /**
@@ -853,6 +874,7 @@ public class UpdateSite {
          * Jenkins will show a link to this URL when displaying the deprecation message.
          */
         public final String url;
+
         public Deprecation(String url) {
             this.url = url;
         }
@@ -871,6 +893,13 @@ public class UpdateSite {
         }
     }
 
+    @Restricted(NoExternalUse.class)
+    public enum WarningType {
+        CORE,
+        PLUGIN,
+        UNKNOWN
+    }
+
     /**
      * Represents a warning about a certain component, mostly related to known security issues.
      *
@@ -880,19 +909,13 @@ public class UpdateSite {
      * @since 2.40
      */
     @Restricted(NoExternalUse.class)
-    public static final class Warning {
-
-        public enum Type {
-            CORE,
-            PLUGIN,
-            UNKNOWN
-        }
+    public final class Warning {
 
         /**
          * The type classifier for this warning.
          */
         @NonNull
-        public /* final */ Type type;
+        public /* final */ WarningType type;
 
         /**
          * The globally unique ID of this warning.
@@ -947,9 +970,9 @@ public class UpdateSite {
         @Restricted(NoExternalUse.class)
         public Warning(JSONObject o) {
             try {
-                this.type = Type.valueOf(o.getString("type").toUpperCase(Locale.US));
+                this.type = WarningType.valueOf(o.getString("type").toUpperCase(Locale.US));
             } catch (IllegalArgumentException ex) {
-                this.type = Type.UNKNOWN;
+                this.type = WarningType.UNKNOWN;
             }
             this.id = o.getString("id");
             this.component = Util.intern(o.getString("name"));
@@ -991,7 +1014,7 @@ public class UpdateSite {
         }
 
         public boolean isPluginWarning(@NonNull String pluginName) {
-            return type == Type.PLUGIN && pluginName.equals(this.component);
+            return type == WarningType.PLUGIN && pluginName.equals(this.component);
         }
 
         /**
@@ -1002,11 +1025,7 @@ public class UpdateSite {
             switch (this.type) {
                 case CORE:
                     VersionNumber current = Jenkins.getVersion();
-
-                    if (!isRelevantToVersion(current)) {
-                        return false;
-                    }
-                    return true;
+                    return isRelevantToVersion(current);
                 case PLUGIN:
 
                     // check whether plugin is installed
@@ -1027,6 +1046,40 @@ public class UpdateSite {
             }
         }
 
+        /**
+         * Returns whether this warning is fixable by updating the affected component.
+         * @return {@code true} if the warning does not apply to the latest offered version of core or the affected plugin;
+         * {@code false} if it does; and {@code null} when the affected component isn't being offered, or it's a warning
+         * for something other than core or a plugin.
+         */
+        @SuppressFBWarnings(value = "NP_BOOLEAN_RETURN_NULL")
+        public Boolean isFixable() {
+            final Data data = UpdateSite.this.data;
+            if (data == null) {
+                return null;
+            }
+            switch (this.type) {
+                case CORE: {
+                    final Entry core = data.core;
+                    if (core == null) {
+                        return null;
+                    }
+                    final VersionNumber latestCoreVersion = new VersionNumber(core.version);
+                    return !isRelevantToVersion(latestCoreVersion);
+                }
+                case PLUGIN: {
+                    final Entry plugin = data.plugins.get(component);
+                    if (plugin == null) {
+                        return null;
+                    }
+                    final VersionNumber latestCoreVersion = new VersionNumber(plugin.version);
+                    return !isRelevantToVersion(latestCoreVersion);
+                }
+                default:
+                    return null;
+            }
+        }
+
         public boolean isRelevantToVersion(@NonNull VersionNumber version) {
             if (this.versionRanges.isEmpty()) {
                 // no version ranges specified, so all versions are affected
@@ -1043,7 +1096,7 @@ public class UpdateSite {
     }
 
     private static String get(JSONObject o, String prop) {
-        if(o.has(prop))
+        if (o.has(prop))
             return o.getString(prop);
         else
             return null;
@@ -1051,6 +1104,42 @@ public class UpdateSite {
 
     static final Predicate<Object> IS_DEP_PREDICATE = x -> x instanceof JSONObject && get((JSONObject) x, "name") != null;
     static final Predicate<Object> IS_NOT_OPTIONAL = x -> "false".equals(get((JSONObject) x, "optional"));
+
+    /**
+     * Metadata for one issue tracker provided by the update site.
+     */
+    @Restricted(NoExternalUse.class)
+    public static final class IssueTracker {
+        /**
+         * A string specifying the type of issue tracker.
+         */
+        public final String type;
+        /**
+         * Issue tracker URL that can be used to view previously reported issues.
+         */
+        public final String viewUrl;
+        /**
+         * Issue tracker URL that can be used to report a new issue.
+         */
+        @CheckForNull
+        public final String reportUrl;
+
+        public IssueTracker(@NonNull String type, @NonNull String viewUrl, @CheckForNull String reportUrl) {
+            this.type = type;
+            this.viewUrl = viewUrl;
+            this.reportUrl = reportUrl;
+        }
+
+        private static IssueTracker createFromJSONObject(Object o) {
+            if (o instanceof JSONObject) {
+                JSONObject jsonObject = (JSONObject) o;
+                if (jsonObject.has("type") && jsonObject.has("viewUrl") && jsonObject.has("reportUrl")) {
+                    return new IssueTracker(jsonObject.getString("type"), jsonObject.getString("viewUrl"), jsonObject.getString("reportUrl"));
+                }
+            }
+            return null;
+        }
+    }
 
     public final class Plugin extends Entry {
         /**
@@ -1083,13 +1172,6 @@ public class UpdateSite {
         @Exported
         public final String requiredCore;
         /**
-         * Version of Java this plugin requires to run.
-         *
-         * @since 2.158
-         */
-        @Exported
-        public final String minimumJavaVersion;
-        /**
          * Categories for grouping plugins, taken from labels assigned to wiki page.
          * Can be {@code null} if the update center does not return categories.
          */
@@ -1101,13 +1183,13 @@ public class UpdateSite {
          * Dependencies of this plugin, a name -&gt; version mapping.
          */
         @Exported
-        public final Map<String,String> dependencies;
-        
+        public final Map<String, String> dependencies;
+
         /**
          * Optional dependencies of this plugin.
          */
         @Exported
-        public final Map<String,String> optionalDependencies;
+        public final Map<String, String> optionalDependencies;
 
         /**
          * Set of plugins, this plugin is a incompatible dependency to.
@@ -1130,33 +1212,33 @@ public class UpdateSite {
         public final Double popularity;
 
         /**
-         * The latest existing version of this plugin. May be different from the version being offered by the
-         * update site, which will result in a notice on the UI.
+         * Issue trackers associated with this plugin.
+         * This list is sorted by preference in descending order, meaning a UI
+         * supporting only one issue tracker should reference the first one
+         * supporting the desired behavior (like having a {@code reportUrl}).
          */
         @Restricted(NoExternalUse.class)
-        public String latest;
+        public IssueTracker[] issueTrackers;
 
         @DataBoundConstructor
         public Plugin(String sourceId, JSONObject o) {
             super(sourceId, o, UpdateSite.this.url);
-            this.wiki = get(o,"wiki");
-            this.title = get(o,"title");
-            this.excerpt = get(o,"excerpt");
-            this.compatibleSinceVersion = Util.intern(get(o,"compatibleSinceVersion"));
-            this.minimumJavaVersion = Util.intern(get(o, "minimumJavaVersion"));
-            this.latest = get(o, "latest");
-            this.requiredCore = Util.intern(get(o,"requiredCore"));
+            this.wiki = get(o, "wiki");
+            this.title = get(o, "title");
+            this.excerpt = get(o, "excerpt");
+            this.compatibleSinceVersion = Util.intern(get(o, "compatibleSinceVersion"));
+            this.requiredCore = Util.intern(get(o, "requiredCore"));
             final String releaseTimestamp = get(o, "releaseTimestamp");
             Date date = null;
             if (releaseTimestamp != null) {
                 try {
                     date = Date.from(Instant.parse(releaseTimestamp));
-                } catch (Exception ex) {
+                } catch (RuntimeException ex) {
                     LOGGER.log(Level.FINE, "Failed to parse releaseTimestamp for " + title + " from " + sourceId, ex);
                 }
             }
             final String popularityFromJson = get(o, "popularity");
-            Double popularity = 0.0;
+            double popularity = 0.0;
             if (popularityFromJson != null) {
                 try {
                     popularity = Double.parseDouble(popularityFromJson);
@@ -1166,18 +1248,20 @@ public class UpdateSite {
             }
             this.popularity = popularity;
             this.releaseTimestamp = date;
-            this.categories = o.has("labels") ? internInPlace((String[])o.getJSONArray("labels").toArray(EMPTY_STRING_ARRAY)) : null;
+            this.categories = o.has("labels") ? PluginLabelUtil.canonicalLabels(o.getJSONArray("labels")) : null;
+            this.issueTrackers = o.has("issueTrackers") ? o.getJSONArray("issueTrackers").stream().map(IssueTracker::createFromJSONObject).filter(Objects::nonNull).toArray(IssueTracker[]::new) : null;
+
             JSONArray ja = o.getJSONArray("dependencies");
-            int depCount = (int)ja.stream().filter(IS_DEP_PREDICATE.and(IS_NOT_OPTIONAL)).count();
-            int optionalDepCount = (int)ja.stream().filter(IS_DEP_PREDICATE.and(IS_NOT_OPTIONAL.negate())).count();
+            int depCount = (int) ja.stream().filter(IS_DEP_PREDICATE.and(IS_NOT_OPTIONAL)).count();
+            int optionalDepCount = (int) ja.stream().filter(IS_DEP_PREDICATE.and(IS_NOT_OPTIONAL.negate())).count();
             dependencies = getPresizedMutableMap(depCount);
             optionalDependencies = getPresizedMutableMap(optionalDepCount);
 
-            for(Object jo : o.getJSONArray("dependencies")) {
+            for (Object jo : o.getJSONArray("dependencies")) {
                 JSONObject depObj = (JSONObject) jo;
                 // Make sure there's a name attribute and that the optional value isn't true.
-                String depName = Util.intern(get(depObj,"name"));
-                if (depName!=null) {
+                String depName = Util.intern(get(depObj, "name"));
+                if (depName != null) {
                     if (get(depObj, "optional").equals("false")) {
                         dependencies.put(depName, Util.intern(get(depObj, "version")));
                     } else {
@@ -1200,7 +1284,7 @@ public class UpdateSite {
 
         public String getDisplayName() {
             String displayName;
-            if(title!=null)
+            if (title != null)
                 displayName = title;
             else
                 displayName = name;
@@ -1231,9 +1315,9 @@ public class UpdateSite {
 
         @Restricted(NoExternalUse.class) // table.jelly
         public boolean isCompatible(PluginManager.MetadataCache cache) {
-            return isCompatibleWithInstalledVersion() && !isForNewerHudson() &&  !isForNewerJava() &&
+            return isCompatibleWithInstalledVersion() && !isForNewerHudson() &&
                     isNeededDependenciesCompatibleWithInstalledVersion(cache) &&
-                    !isNeededDependenciesForNewerJenkins(cache) && !isNeededDependenciesForNewerJava();
+                    !isNeededDependenciesForNewerJenkins(cache);
         }
 
         /**
@@ -1264,7 +1348,7 @@ public class UpdateSite {
         public List<Plugin> getNeededDependencies() {
             List<Plugin> deps = new ArrayList<>();
 
-            for(Map.Entry<String,String> e : dependencies.entrySet()) {
+            for (Map.Entry<String, String> e : dependencies.entrySet()) {
                 VersionNumber requiredVersion = e.getValue() != null ? new VersionNumber(e.getValue()) : null;
                 Plugin depPlugin = Jenkins.get().getUpdateCenter().getPlugin(e.getKey(), requiredVersion);
                 if (depPlugin == null) {
@@ -1275,7 +1359,7 @@ public class UpdateSite {
                 // Is the plugin installed already? If not, add it.
                 PluginWrapper current = depPlugin.getInstalled();
 
-                if (current ==null) {
+                if (current == null) {
                     deps.add(depPlugin);
                 }
                 // If the dependency plugin is installed, is the version we depend on newer than
@@ -1289,7 +1373,7 @@ public class UpdateSite {
                 }
             }
 
-            for(Map.Entry<String,String> e : optionalDependencies.entrySet()) {
+            for (Map.Entry<String, String> e : optionalDependencies.entrySet()) {
                 VersionNumber requiredVersion = e.getValue() != null ? new VersionNumber(e.getValue()) : null;
                 Plugin depPlugin = Jenkins.get().getUpdateCenter().getPlugin(e.getKey(), requiredVersion);
                 if (depPlugin == null) {
@@ -1310,25 +1394,10 @@ public class UpdateSite {
 
         public boolean isForNewerHudson() {
             try {
-                return requiredCore!=null && new VersionNumber(requiredCore).isNewerThan(
+                return requiredCore != null && new VersionNumber(requiredCore).isNewerThan(
                   new VersionNumber(Jenkins.VERSION.replaceFirst("SHOT *\\(private.*\\)", "SHOT")));
             } catch (NumberFormatException nfe) {
                 return true;  // If unable to parse version
-            }
-        }
-
-        /**
-         * Returns true iff the plugin declares a minimum Java version and it's newer than what the Jenkins master is running on.
-         * @since 2.158
-         */
-        public boolean isForNewerJava() {
-            try {
-                final JavaSpecificationVersion currentRuntimeJavaVersion = JavaUtils.getCurrentJavaRuntimeVersionNumber();
-                return minimumJavaVersion != null && new JavaSpecificationVersion(minimumJavaVersion).isNewerThan(
-                        currentRuntimeJavaVersion);
-            } catch (NumberFormatException nfe) {
-                logBadMinJavaVersion();
-                return false; // treat this as undeclared minimum Java version
             }
         }
 
@@ -1339,41 +1408,11 @@ public class UpdateSite {
             } catch (NumberFormatException nfe) {
                 // unable to parse version
             }
-            for (Plugin p: getNeededDependencies()) {
+            for (Plugin p : getNeededDependencies()) {
                 VersionNumber v = p.getNeededDependenciesRequiredCore();
                 if (versionNumber == null || v.isNewerThan(versionNumber)) versionNumber = v;
             }
             return versionNumber;
-        }
-
-        /**
-         * Returns the minimum Java version needed to use the plugin and all its dependencies.
-         * @since 2.158
-         * @return the minimum Java version needed to use the plugin and all its dependencies, or null if unspecified.
-         */
-        @CheckForNull
-        public VersionNumber getNeededDependenciesMinimumJavaVersion() {
-            VersionNumber versionNumber = null;
-            try {
-                versionNumber = minimumJavaVersion == null ? null : new VersionNumber(minimumJavaVersion);
-            } catch (NumberFormatException nfe) {
-                logBadMinJavaVersion();
-            }
-            for (Plugin p: getNeededDependencies()) {
-                VersionNumber v = p.getNeededDependenciesMinimumJavaVersion();
-                if (v == null) {
-                    continue;
-                }
-                if (versionNumber == null || v.isNewerThan(versionNumber)) {
-                    versionNumber = v;
-                }
-            }
-            return versionNumber;
-        }
-
-        private void logBadMinJavaVersion() {
-            LOGGER.log(Level.WARNING, "minimumJavaVersion was specified for plugin {0} but unparseable (received {1})",
-                       new String[]{this.name, this.minimumJavaVersion});
         }
 
         public boolean isNeededDependenciesForNewerJenkins() {
@@ -1390,20 +1429,6 @@ public class UpdateSite {
                 }
                 return false;
             });
-        }
-
-        /**
-         * Returns true iff any of the plugin dependencies require a newer Java than Jenkins is running on.
-         *
-         * @since 2.158
-         */
-        public boolean isNeededDependenciesForNewerJava() {
-            for (Plugin p: getNeededDependencies()) {
-                if (p.isForNewerJava() || p.isNeededDependenciesForNewerJava()) {
-                    return true;
-                }
-            }
-            return false;
         }
 
         /**
@@ -1491,7 +1516,7 @@ public class UpdateSite {
             UpdateSiteWarningsConfiguration configuration = ExtensionList.lookupSingleton(UpdateSiteWarningsConfiguration.class);
             Set<Warning> warnings = new HashSet<>();
 
-            for (Warning warning: configuration.getAllWarnings()) {
+            for (Warning warning : configuration.getAllWarnings()) {
                 if (configuration.isIgnored(warning)) {
                     // warning is currently being ignored
                     continue;
@@ -1565,7 +1590,7 @@ public class UpdateSite {
          *      See {@link UpdateCenter#isRestartRequiredForCompletion()}
          */
         public Future<UpdateCenterJob> deploy(boolean dynamicLoad) {
-            return deploy(dynamicLoad, null, null);
+            return deploy(dynamicLoad, null, null, false);
         }
 
         /**
@@ -1581,29 +1606,36 @@ public class UpdateSite {
          *      See {@link UpdateCenter#isRestartRequiredForCompletion()}
          * @param correlationId A correlation ID to be set on the job.
          * @param batch if defined, a list of plugins to add to, which will be started later
+         * @param hasEnabledDependents
+         *      If true, this plugin will be enabled if this plugin is disabled.
+         *      If false, this plugin will remain the current status.
          */
         @Restricted(NoExternalUse.class)
-        public Future<UpdateCenterJob> deploy(boolean dynamicLoad, @CheckForNull UUID correlationId, @CheckForNull List<PluginWrapper> batch) {
+        public Future<UpdateCenterJob> deploy(boolean dynamicLoad, @CheckForNull UUID correlationId, @CheckForNull List<PluginWrapper> batch, boolean hasEnabledDependents) {
             Jenkins.get().checkPermission(Jenkins.ADMINISTER);
             UpdateCenter uc = Jenkins.get().getUpdateCenter();
+            PluginWrapper pw = getInstalled();
             for (Plugin dep : getNeededDependencies()) {
                 UpdateCenter.InstallationJob job = uc.getJob(dep);
                 if (job == null || job.status instanceof UpdateCenter.DownloadJob.Failure) {
                     LOGGER.log(Level.INFO, "Adding dependent install of " + dep.name + " for plugin " + name);
-                    dep.deploy(dynamicLoad, /* UpdateCenterPluginInstallTest.test_installKnownPlugins specifically asks that these not be correlated */ null, batch);
+                    if (pw == null) {
+                        dep.deploy(dynamicLoad, /* UpdateCenterPluginInstallTest.test_installKnownPlugins specifically asks that these not be correlated */ null, batch, true);
+                    } else {
+                        dep.deploy(dynamicLoad, null, batch, pw.isEnabled());
+                    }
                 } else {
                     LOGGER.log(Level.FINE, "Dependent install of {0} for plugin {1} already added, skipping", new Object[] {dep.name, name});
                 }
             }
-            PluginWrapper pw = getInstalled();
-            if(pw != null) { // JENKINS-34494 - check for this plugin being disabled
+            if (pw != null) { // JENKINS-34494 - check for this plugin being disabled
                 Future<UpdateCenterJob> enableJob = null;
-                if(!pw.isEnabled()) {
+                if (!pw.isEnabled() && hasEnabledDependents) {
                     UpdateCenter.EnableJob job = uc.new EnableJob(UpdateSite.this, null, this, dynamicLoad);
                     job.setCorrelationId(correlationId);
                     enableJob = uc.addJob(job);
                 }
-                if(pw.getVersionNumber().equals(new VersionNumber(version))) {
+                if (pw.getVersionNumber().equals(new VersionNumber(version))) {
                     return enableJob != null ? enableJob : uc.addJob(uc.new NoOpJob(UpdateSite.this, null, this));
                 }
             }
@@ -1624,6 +1656,7 @@ public class UpdateSite {
         /**
          * Making the installation web bound.
          */
+
         @RequirePOST
         public HttpResponse doInstall() throws IOException {
             deploy(false);
@@ -1651,6 +1684,7 @@ public class UpdateSite {
     private static final Logger LOGGER = Logger.getLogger(UpdateSite.class.getName());
 
     // The name uses UpdateCenter for compatibility reason.
-    public static boolean neverUpdate = SystemProperties.getBoolean(UpdateCenter.class.getName()+".never");
+    @SuppressFBWarnings(value = "MS_SHOULD_BE_FINAL", justification = "for script console")
+    public static boolean neverUpdate = SystemProperties.getBoolean(UpdateCenter.class.getName() + ".never");
 
 }
