@@ -21,6 +21,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.security;
 
 import hudson.model.Build;
@@ -31,9 +32,6 @@ import hudson.model.Job;
 import hudson.model.ModelObject;
 import hudson.model.Node;
 import hudson.model.Run;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import jenkins.model.Jenkins;
 
@@ -70,7 +68,7 @@ public final class PermissionScope {
 
     public PermissionScope(Class<? extends ModelObject> modelClass, PermissionScope... containers) {
         this.modelClass = modelClass;
-        this.containers = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(containers)));
+        this.containers = Set.of(containers);
     }
 
     /**
@@ -80,7 +78,7 @@ public final class PermissionScope {
      * A scope always contains itself.
      */
     public boolean isContainedBy(PermissionScope s) {
-        if (this==s)    return true;
+        if (this == s)    return true;
         for (PermissionScope c : containers) {
             if (c.isContainedBy(s))
                 return true;
@@ -100,20 +98,20 @@ public final class PermissionScope {
     /**
      * Permissions scoped to containers of {@link Item}s.
      */
-    public static final PermissionScope ITEM_GROUP = new PermissionScope(ItemGroup.class,JENKINS);
+    public static final PermissionScope ITEM_GROUP = new PermissionScope(ItemGroup.class, JENKINS);
 
     /**
      * Permissions scoped to {@link Item}s (including {@link Job}s and other subtypes)
      */
-    public static final PermissionScope ITEM = new PermissionScope(Item.class,ITEM_GROUP);
+    public static final PermissionScope ITEM = new PermissionScope(Item.class, ITEM_GROUP);
 
     /**
      * Permissions scoped to {@link Run}s (including {@link Build}s and other subtypes)
      */
-    public static final PermissionScope RUN = new PermissionScope(Run.class,ITEM);
+    public static final PermissionScope RUN = new PermissionScope(Run.class, ITEM);
 
     /**
      * Permissions scoped to {@link Node}s or {@link Computer}s (generally interchangeably).
      */
-    public static final PermissionScope COMPUTER = new PermissionScope(Computer.class,JENKINS);
+    public static final PermissionScope COMPUTER = new PermissionScope(Computer.class, JENKINS);
 }
