@@ -6,9 +6,6 @@ import hudson.Functions;
 import hudson.model.Api;
 import hudson.model.UnprotectedRootAction;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
@@ -24,43 +21,43 @@ import org.springframework.security.core.GrantedAuthority;
 
 /**
  * Expose the data needed for /whoAmI, so it can be exposed by Api.
- * 
+ *
  * @author Ryan Campbell
  *
  */
 @Extension @Symbol("whoAmI")
 @ExportedBean
 public class WhoAmI implements UnprotectedRootAction {
-    private static final Set<String> dangerousHeaders = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+    private static final Set<String> dangerousHeaders = Set.of(
             "cookie",
             // https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers#Authentication
             "authorization", "www-authenticate", "proxy-authenticate", "proxy-authorization"
-    )));
-    
+    );
+
     public Api getApi() {
         return new Api(this);
     }
-    
+
     @Exported
     public String getName() {
         return auth().getName();
     }
-    
+
     @Exported
     public boolean isAuthenticated() {
         return auth().isAuthenticated();
     }
-    
+
     @Exported
     public boolean isAnonymous() {
         return Functions.isAnonymous();
     }
-    
+
     // @Exported removed due to leak of sessionId with some SecurityRealm
     public String getDetails() {
         return auth().getDetails() != null ? auth().getDetails().toString() : null;
     }
-    
+
     // @Exported removed due to leak of sessionId with some SecurityRealm
     public String getToString() {
         return auth().toString();
@@ -75,7 +72,7 @@ public class WhoAmI implements UnprotectedRootAction {
         if (auth().getAuthorities() == null) {
             return MemoryReductionUtil.EMPTY_STRING_ARRAY;
         }
-        List <String> authorities = new ArrayList<>();
+        List<String> authorities = new ArrayList<>();
         for (GrantedAuthority a : auth().getAuthorities()) {
             authorities.add(a.getAuthority());
         }
