@@ -1,6 +1,6 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2009, Sun Microsystems, Inc., Kohsuke Kawaguchi, Brian Westrich, Jean-Baptiste Quenot, Stephen Connolly, Tom Huybrechts
  *               2015 Kanstantsin Shautsou
  *
@@ -10,10 +10,10 @@
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -22,9 +22,9 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.triggers;
 
-import antlr.ANTLRException;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
@@ -62,7 +62,7 @@ import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import jenkins.model.Jenkins;
-import jenkins.model.ParameterizedJobMixIn;
+import jenkins.triggers.TriggeredItem;
 import jenkins.util.SystemProperties;
 import org.jenkinsci.Symbol;
 import org.kohsuke.accmod.Restricted;
@@ -76,6 +76,7 @@ import org.kohsuke.accmod.restrictions.NoExternalUse;
  * put {@link Extension} on your {@link TriggerDescriptor} class.
  *
  * @author Kohsuke Kawaguchi
+ * @see TriggeredItem
  */
 public abstract class Trigger<J extends Item> implements Describable<Trigger<?>>, ExtensionPoint {
 
@@ -90,15 +91,16 @@ public abstract class Trigger<J extends Item> implements Describable<Trigger<?>>
      * @see Items#currentlyUpdatingByXml
      */
     public void start(J project, boolean newInstance) {
+        LOGGER.finer(() -> "Starting " + this + " on " + project);
         this.job = project;
 
-        try {// reparse the tabs with the job as the hash
+        try { // reparse the tabs with the job as the hash
             if (spec != null) {
                 this.tabs = CronTabList.create(spec, Hash.from(project.getFullName()));
             } else {
                 LOGGER.log(Level.WARNING, "The job {0} has a null crontab spec which is incorrect", job.getFullName());
             }
-        } catch (ANTLRException e) {
+        } catch (IllegalArgumentException e) {
             // this shouldn't fail because we've already parsed stuff in the constructor,
             // so if it fails, use whatever 'tabs' that we already have.
             LOGGER.log(Level.WARNING, String.format("Failed to parse crontab spec %s in job %s", spec, project.getFullName()), e);
@@ -148,8 +150,8 @@ public abstract class Trigger<J extends Item> implements Describable<Trigger<?>>
     public Collection<? extends Action> getProjectActions() {
         // delegate to getJobAction (singular) for backward compatible behavior
         Action a = getProjectAction();
-        if (a==null)    return Collections.emptyList();
-        return Collections.singletonList(a);
+        if (a == null)    return Collections.emptyList();
+        return List.of(a);
     }
 
     @Override
@@ -168,8 +170,11 @@ public abstract class Trigger<J extends Item> implements Describable<Trigger<?>>
      * Creates a new {@link Trigger} that gets {@link #run() run}
      * periodically. This is useful when your trigger does
      * some polling work.
+     *
+     * @param cronTabSpec the crontab entry to be parsed
+     * @throws IllegalArgumentException if the crontab entry cannot be parsed
      */
-    protected Trigger(@NonNull String cronTabSpec) throws ANTLRException {
+    protected Trigger(@NonNull String cronTabSpec) {
         this.spec = cronTabSpec;
         this.tabs = CronTabList.create(cronTabSpec);
     }
@@ -194,7 +199,7 @@ public abstract class Trigger<J extends Item> implements Describable<Trigger<?>>
     protected Object readResolve() throws ObjectStreamException {
         try {
             tabs = CronTabList.create(spec);
-        } catch (ANTLRException e) {
+        } catch (IllegalArgumentException e) {
             InvalidObjectException x = new InvalidObjectException(e.getMessage());
             x.initCause(e);
             throw x;
@@ -202,6 +207,10 @@ public abstract class Trigger<J extends Item> implements Describable<Trigger<?>>
         return this;
     }
 
+    @Override
+    public String toString() {
+        return super.toString() + "[" + spec + "]";
+    }
 
     /**
      * Runs every minute to check {@link TimerTrigger} and schedules build.
@@ -227,16 +236,16 @@ public abstract class Trigger<J extends Item> implements Describable<Trigger<?>>
 
         @Override
         public void doRun() {
-            while(new Date().getTime() >= cal.getTimeInMillis()) {
+            while (new Date().getTime() >= cal.getTimeInMillis()) {
                 LOGGER.log(Level.FINE, "cron checking {0}", cal.getTime());
                 try {
                     checkTriggers(cal);
                 } catch (Throwable e) {
-                    LOGGER.log(Level.WARNING,"Cron thread throw an exception",e);
+                    LOGGER.log(Level.WARNING, "Cron thread throw an exception", e);
                     // SafeTimerTask.run would also catch this, but be sure to increment cal too.
                 }
 
-                cal.add(Calendar.MINUTE,1);
+                cal.add(Calendar.MINUTE, 1);
             }
         }
     }
@@ -262,7 +271,11 @@ public abstract class Trigger<J extends Item> implements Describable<Trigger<?>>
                     public void run(AbstractProject p) {
                         for (Trigger t : (Collection<Trigger>) p.getTriggers().values()) {
                             if (t instanceof SCMTrigger) {
-                                LOGGER.fine("synchronously triggering SCMTrigger for project " + t.job.getName());
+                                if (t.job != null) {
+                                    LOGGER.fine("synchronously triggering SCMTrigger for project " + t.job.getName());
+                                } else {
+                                    LOGGER.fine("synchronously triggering SCMTrigger for unknown project");
+                                }
                                 t.run();
                             }
                         }
@@ -274,16 +287,21 @@ public abstract class Trigger<J extends Item> implements Describable<Trigger<?>>
         }
 
         // Process all triggers, except SCMTriggers when synchronousPolling is set
-        for (ParameterizedJobMixIn.ParameterizedJob<?, ?> p : inst.allItems(ParameterizedJobMixIn.ParameterizedJob.class)) {
+        for (TriggeredItem p : inst.allItems(TriggeredItem.class)) {
+            LOGGER.finer(() -> "considering " + p);
             for (Trigger t : p.getTriggers().values()) {
-                if (!(t instanceof SCMTrigger && scmd.synchronousPolling)) {
-                    if (t !=null && t.spec != null && t.tabs != null) {
+                LOGGER.finer(() -> "found trigger " + t);
+                if (!(p instanceof AbstractProject && t instanceof SCMTrigger && scmd.synchronousPolling)) {
+                    if (t != null && t.spec != null && t.tabs != null) {
                         LOGGER.log(Level.FINE, "cron checking {0} with spec ‘{1}’", new Object[]{p, t.spec.trim()});
 
                         if (t.tabs.check(cal)) {
                             LOGGER.log(Level.CONFIG, "cron triggered {0}", p);
                             try {
                                 long begin_time = System.currentTimeMillis();
+                                if (t.job == null) {
+                                    LOGGER.fine(() -> t + " not yet started on " + p + " but trying to run anyway");
+                                }
                                 t.run();
                                 long end_time = System.currentTimeMillis();
                                 if (end_time - begin_time > CRON_THRESHOLD * 1000) {
@@ -310,12 +328,12 @@ public abstract class Trigger<J extends Item> implements Describable<Trigger<?>>
         }
     }
 
-    @SuppressFBWarnings("MS_SHOULD_BE_FINAL")
-    @Restricted(NoExternalUse.class)
-    @RestrictedSince("2.289")
     /**
      * Used to be milliseconds, now is seconds since Jenkins 2.289.
      */
+    @SuppressFBWarnings(value = "MS_SHOULD_BE_FINAL", justification = "for script console")
+    @Restricted(NoExternalUse.class)
+    @RestrictedSince("2.289")
     public static /* non-final for Groovy */ long CRON_THRESHOLD = SystemProperties.getLong(Trigger.class.getName() + ".CRON_THRESHOLD", 30L); // Default threshold 30s
 
     private static final Logger LOGGER = Logger.getLogger(Trigger.class.getName());
@@ -330,14 +348,14 @@ public abstract class Trigger<J extends Item> implements Describable<Trigger<?>>
      *
      * @deprecated Use {@link jenkins.util.Timer#get()} instead.
      */
-    @SuppressWarnings("MS_SHOULD_BE_FINAL")
+    @SuppressFBWarnings(value = "MS_CANNOT_BE_FINAL", justification = "for backward compatibility")
     @Deprecated
     public static @CheckForNull Timer timer;
 
     /**
      * Returns all the registered {@link Trigger} descriptors.
      */
-    public static DescriptorExtensionList<Trigger<?>,TriggerDescriptor> all() {
+    public static DescriptorExtensionList<Trigger<?>, TriggerDescriptor> all() {
         return (DescriptorExtensionList) Jenkins.get().getDescriptorList(Trigger.class);
     }
 
@@ -347,13 +365,13 @@ public abstract class Trigger<J extends Item> implements Describable<Trigger<?>>
     public static List<TriggerDescriptor> for_(Item i) {
         List<TriggerDescriptor> r = new ArrayList<>();
         for (TriggerDescriptor t : all()) {
-            if(!t.isApplicable(i))  continue;
+            if (!t.isApplicable(i))  continue;
 
-            if (i instanceof TopLevelItem) {// ugly
+            if (i instanceof TopLevelItem) { // ugly
                 TopLevelItemDescriptor tld = ((TopLevelItem) i).getDescriptor();
                 // tld shouldn't be really null in contract, but we often write test Describables that
                 // doesn't have a Descriptor.
-                if(tld!=null && !tld.isApplicable(t))    continue;
+                if (tld != null && !tld.isApplicable(t))    continue;
             }
 
             r.add(t);
