@@ -34,7 +34,6 @@ import hudson.scm.ChangeLogSet;
 import hudson.scm.SCM;
 import hudson.util.AdaptedIterator;
 import java.util.AbstractSet;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
@@ -49,7 +48,7 @@ import org.kohsuke.stapler.export.Exported;
  * @since 2.60
  */
 public interface RunWithSCM<JobT extends Job<JobT, RunT>,
-        RunT extends Run<JobT, RunT> & RunWithSCM<JobT,RunT>> {
+        RunT extends Run<JobT, RunT> & RunWithSCM<JobT, RunT>> {
 
     /**
      * Gets all {@link ChangeLogSet}s currently associated with this item.
@@ -94,12 +93,12 @@ public interface RunWithSCM<JobT extends Job<JobT, RunT>,
             return calculateCulprits();
         }
 
-        return new AbstractSet<User>() {
-            private Set<String> culpritIds = Collections.unmodifiableSet(new HashSet<>(getCulpritIds()));
+        return new AbstractSet<>() {
+            private Set<String> culpritIds = Set.copyOf(getCulpritIds());
 
             @Override
             public Iterator<User> iterator() {
-                return new AdaptedIterator<String,User>(culpritIds.iterator()) {
+                return new AdaptedIterator<>(culpritIds.iterator()) {
                     @Override
                     protected User adapt(String id) {
                         // TODO: Probably it should not auto-create users
@@ -125,7 +124,7 @@ public interface RunWithSCM<JobT extends Job<JobT, RunT>,
     @NonNull
     default Set<User> calculateCulprits() {
         Set<User> r = new HashSet<>();
-        RunT p = ((RunT)this).getPreviousCompletedBuild();
+        RunT p = ((RunT) this).getPreviousCompletedBuild();
         if (p != null) {
             Result pr = p.getResult();
             if (pr != null && pr.isWorseThan(Result.SUCCESS)) {
