@@ -21,8 +21,10 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package jenkins.widgets;
 
+import hudson.model.Action;
 import hudson.model.Build;
 import hudson.model.FreeStyleBuild;
 import hudson.model.FreeStyleProject;
@@ -31,7 +33,6 @@ import hudson.model.MockItem;
 import hudson.model.ModelObject;
 import hudson.model.ParameterValue;
 import hudson.model.ParametersAction;
-import hudson.model.Queue;
 import hudson.model.Result;
 import hudson.model.Run;
 import hudson.model.StringParameterValue;
@@ -42,6 +43,9 @@ import java.util.Calendar;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
+import jenkins.model.queue.QueueItem;
 import org.junit.Assert;
 import org.junit.Test;
 import org.jvnet.hudson.test.Issue;
@@ -76,7 +80,7 @@ public class HistoryPageFilterTest {
     public void test_latest_partial_page() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, null);
         Iterable<ModelObject> runs = newRuns(1, 2);
-        List<Queue.Item> queueItems = newQueueItems(3, 4);
+        var queueItems = newQueueItems(3, 4);
 
         historyPageFilter.add(runs, queueItems);
 
@@ -100,7 +104,7 @@ public class HistoryPageFilterTest {
     public void test_latest_longer_list() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, null);
         Iterable<ModelObject> runs = newRuns(1, 10);
-        List<Queue.Item> queueItems = newQueueItems(11, 12);
+        var queueItems = newQueueItems(11, 12);
 
         historyPageFilter.add(runs, queueItems);
 
@@ -268,7 +272,7 @@ public class HistoryPageFilterTest {
     public void test_newerThan_doesntIncludeQueuedItems() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, 5L, null);
         Iterable<ModelObject> runs = newRuns(1, 10);
-        List<Queue.Item> queueItems = newQueueItems(11, 12);
+        var queueItems = newQueueItems(11, 12);
 
         historyPageFilter.add(runs, queueItems);
 
@@ -311,7 +315,7 @@ public class HistoryPageFilterTest {
         //given
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, null);
         Iterable<ModelObject> runs = newRuns(23, 24);
-        List<Queue.Item> queueItems = newQueueItems(25, 26);
+        var queueItems = newQueueItems(25, 26);
         //and
         historyPageFilter.setSearchString("23");
 
@@ -340,8 +344,8 @@ public class HistoryPageFilterTest {
     @Issue("JENKINS-40718")
     public void should_search_builds_by_build_variables() {
         Iterable<ModelObject> runs = Arrays.asList(
-                new MockBuild(2).withBuildVariables(Collections.singletonMap("env", "dummyEnv")),
-                new MockBuild(1).withBuildVariables(Collections.singletonMap("env", "otherEnv")));
+                new MockBuild(2).withBuildVariables(Map.of("env", "dummyEnv")),
+                new MockBuild(1).withBuildVariables(Map.of("env", "otherEnv")));
         assertOneMatchingBuildForGivenSearchStringAndRunItems("dummyEnv", runs);
     }
 
@@ -349,8 +353,8 @@ public class HistoryPageFilterTest {
     @Issue("JENKINS-40718")
     public void should_search_builds_by_build_params() throws IOException {
         Iterable<ModelObject> runs = Arrays.asList(
-                new MockBuild(2).withBuildParameters(Collections.singletonMap("env", "dummyEnv")),
-                new MockBuild(1).withBuildParameters(Collections.singletonMap("env", "otherEnv")));
+                new MockBuild(2).withBuildParameters(Map.of("env", "dummyEnv")),
+                new MockBuild(1).withBuildParameters(Map.of("env", "otherEnv")));
         assertOneMatchingBuildForGivenSearchStringAndRunItems("dummyEnv", runs);
     }
 
@@ -358,7 +362,7 @@ public class HistoryPageFilterTest {
     @Issue("JENKINS-40718")
     public void should_ignore_sensitive_parameters_in_search_builds_by_build_params() throws IOException {
         Iterable<ModelObject> runs = Arrays.asList(
-                new MockBuild(2).withBuildParameters(Collections.singletonMap("plainPassword", "pass1plain")),
+                new MockBuild(2).withBuildParameters(Map.of("plainPassword", "pass1plain")),
                 new MockBuild(1).withSensitiveBuildParameters("password", "pass1"));
         assertOneMatchingBuildForGivenSearchStringAndRunItems("pass1", runs);
     }
@@ -369,7 +373,7 @@ public class HistoryPageFilterTest {
         //and
         historyPageFilter.setSearchString(searchString);
         //and
-        List<Queue.Item> queueItems = newQueueItems(3, 4);
+        var queueItems = newQueueItems(3, 4);
 
         //when
         historyPageFilter.add(runs, queueItems);
@@ -379,8 +383,8 @@ public class HistoryPageFilterTest {
         Assert.assertEquals(HistoryPageEntry.getEntryId(2), historyPageFilter.runs.get(0).getEntryId());
     }
 
-    private List<Queue.Item> newQueueItems(long startId, long endId) {
-        List<Queue.Item> items = new ArrayList<>();
+    private List<QueueItem> newQueueItems(long startId, long endId) {
+        var items = new ArrayList<QueueItem>();
         for (long queueId = startId; queueId <= endId; queueId++) {
             items.add(new MockItem(queueId));
         }
@@ -444,6 +448,18 @@ public class HistoryPageFilterTest {
         public int getNumber() {
             return (int) queueId;
         }
+
+        @SuppressWarnings("deprecation") // avoid TransientActionFactory
+        @Override
+        public <T extends Action> T getAction(Class<T> type) {
+            for (Action a : getActions()) {
+                if (type.isInstance(a)) {
+                    return type.cast(a);
+                }
+            }
+            return null;
+        }
+
     }
 
     // A version of MockRun that will throw an exception if getQueueId or getNumber is called
@@ -470,6 +486,7 @@ public class HistoryPageFilterTest {
         private final int buildNumber;
 
         private Map<String, String> buildVariables = Collections.emptyMap();
+        private Set<String> sensitiveBuildVariables = Collections.emptySet();
 
         private MockBuild(int buildNumber) {
             super(Mockito.mock(FreeStyleProject.class), Mockito.mock(Calendar.class));
@@ -486,6 +503,11 @@ public class HistoryPageFilterTest {
             return buildVariables;
         }
 
+        @Override
+        public Set<String> getSensitiveBuildVariables() {
+            return sensitiveBuildVariables; // TODO This is never actually set (bad Mock), actual test in test harness
+        }
+
         MockBuild withBuildVariables(Map<String, String> buildVariables) {
             this.buildVariables = buildVariables;
             return this;
@@ -496,19 +518,27 @@ public class HistoryPageFilterTest {
             return this;
         }
 
-        //TODO: Rewrite in functional style when Java 8 is available
         private List<ParameterValue> buildPropertiesMapToParameterValues(Map<String, String> buildParametersAsMap) {
-            List<ParameterValue> parameterValues = new ArrayList<>();
-            for (Map.Entry<String, String> parameter : buildParametersAsMap.entrySet()) {
-                parameterValues.add(new StringParameterValue(parameter.getKey(), parameter.getValue()));
-            }
-            return parameterValues;
+            return buildParametersAsMap.entrySet().stream()
+                    .map(parameter -> new StringParameterValue(parameter.getKey(), parameter.getValue()))
+                    .collect(Collectors.toList());
         }
 
         MockBuild withSensitiveBuildParameters(String paramName, String paramValue) {
-            addAction(new ParametersAction(Collections.singletonList(createSensitiveStringParameterValue(paramName, paramValue)),
-                    Collections.singletonList(paramName)));
+            addAction(new ParametersAction(List.of(createSensitiveStringParameterValue(paramName, paramValue)),
+                    List.of(paramName)));
             return this;
+        }
+
+        @SuppressWarnings("deprecation") // avoid TransientActionFactory
+        @Override
+        public <T extends Action> T getAction(Class<T> type) {
+            for (Action a : getActions()) {
+                if (type.isInstance(a)) {
+                    return type.cast(a);
+                }
+            }
+            return null;
         }
 
         private StringParameterValue createSensitiveStringParameterValue(final String paramName, final String paramValue) {
