@@ -36,8 +36,6 @@ import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import com.gargoylesoftware.htmlunit.html.HtmlAnchor;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
 import hudson.Functions;
 import hudson.matrix.AxisList;
 import hudson.matrix.MatrixProject;
@@ -59,10 +57,16 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.TreeSet;
+import java.util.concurrent.atomic.AtomicBoolean;
 import javax.servlet.ReadListener;
 import javax.servlet.ServletInputStream;
 import jenkins.model.Jenkins;
 import org.apache.commons.io.IOUtils;
+import org.htmlunit.AlertHandler;
+import org.htmlunit.html.HtmlAnchor;
+import org.htmlunit.html.HtmlForm;
+import org.htmlunit.html.HtmlPage;
+import org.junit.Assert;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TestName;
@@ -87,7 +91,7 @@ public class ListViewTest {
     @Test public void nullJobNames() {
         assertTrue(j.jenkins.getView("v").getItems().isEmpty());
     }
-    
+
     @Test
     public void testJobLinksAreValid() throws Exception {
       /*
@@ -101,7 +105,7 @@ public class ListViewTest {
       FreeStyleProject job1 = folder1.createProject(FreeStyleProject.class, "job1");
       MockFolder folder2 = folder1.createProject(MockFolder.class, "folder2");
       FreeStyleProject job2 = folder2.createProject(FreeStyleProject.class, "job2");
-      
+
       ListView lv = new ListView("myview");
       lv.setRecurse(true);
       lv.setIncludeRegex(".*");
@@ -119,7 +123,7 @@ public class ListViewTest {
       checkLinkFromItemExistsAndIsValid(folder2, folder1, folder1, webClient);
       checkLinkFromViewExistsAndIsValid(job2, folder1, lv2, webClient);
     }
-    
+
     private void checkLinkFromViewExistsAndIsValid(Item item, ItemGroup ig, View view, WebClient webClient) throws IOException, SAXException {
       HtmlPage page = webClient.goTo(view.getUrl());
       HtmlAnchor link = page.getAnchorByText(Functions.getRelativeDisplayNameFrom(item, ig));
@@ -142,7 +146,7 @@ public class ListViewTest {
         v.setIncludeRegex(".*");
         v.setRecurse(true);
         // Note: did not manage to reproduce CCE until I changed expand to use ‘for (TopLevelItem item : items)’ rather than ‘for (Item item : items)’; perhaps a compiler-specific issue?
-        assertEquals(Collections.singletonList(mp), v.getItems());
+        assertEquals(List.of(mp), v.getItems());
     }
 
     @Issue("JENKINS-18680")
@@ -247,7 +251,7 @@ public class ListViewTest {
         try (ACLContext acl = ACL.as(User.getOrCreateByIdOrFullName("alice"))) {
             p.renameTo("p2");
         }
-        assertEquals(Collections.singletonList(p), v.getItems());
+        assertEquals(List.of(p), v.getItems());
     }
 
     @Issue("JENKINS-41128")
@@ -261,7 +265,7 @@ public class ListViewTest {
 
         when(req.getMethod()).thenReturn("POST");
         when(req.getParameter("name")).thenReturn("job1");
-        when(req.getInputStream()).thenReturn(new Stream(IOUtils.toInputStream(configXml)));
+        when(req.getInputStream()).thenReturn(new Stream(IOUtils.toInputStream(configXml, StandardCharsets.UTF_8)));
         when(req.getContentType()).thenReturn("application/xml");
         v.doCreateItem(req, rsp);
         List<TopLevelItem> items = v.getItems();
@@ -291,6 +295,23 @@ public class ListViewTest {
         assertEquals("Query parameter 'name' does not correspond to a known and readable item", e.getMessage());
     }
 
+    @Issue("JENKINS-71200")
+    @Test public void doApplyDoNotOverloadElements() throws Exception {
+        MockFolder folder = j.createFolder("folder");
+        FreeStyleProject job = folder.createProject(FreeStyleProject.class, "elements");
+        ListView view = new ListView("view", folder);
+        folder.addView(view);
+        view.add(job);
+
+        final AtomicBoolean alerts = new AtomicBoolean();
+        WebClient webClient = j.createWebClient();
+        webClient.setAlertHandler((AlertHandler) (page, s) -> alerts.set(true));
+        HtmlPage page = webClient.goTo(view.getUrl() + "configure");
+        HtmlForm form = page.getFormByName("viewConfig");
+        j.assertGoodStatus(j.submit(form));
+        Assert.assertFalse("No alert expected", alerts.get());
+    }
+
     @Test public void getItemsNames() throws Exception {
         MockFolder f1 = j.createFolder("f1");
         MockFolder f2 = j.createFolder("f2");
@@ -306,7 +327,7 @@ public class ListViewTest {
         names.add("f1/p3");
         names.add("f2/p4");
         lv.setJobNames(names);
-        assertThat(lv.getItems(), containsInAnyOrder(p1,p2));
+        assertThat(lv.getItems(), containsInAnyOrder(p1, p2));
         lv.setRecurse(true);
         assertThat(lv.getItems(), containsInAnyOrder(p1, p2, p3, p4));
     }
@@ -338,7 +359,7 @@ public class ListViewTest {
         FreeStyleProject p3 = f1.createProject(FreeStyleProject.class, "p3");
         FreeStyleProject p4 = f2.createProject(FreeStyleProject.class, "p4");
         ListView lv = new ListView("view", Jenkins.get());
-        lv.setJobFilters(Collections.singletonList(new AllFilter()));
+        lv.setJobFilters(List.of(new AllFilter()));
         lv.setRecurse(false);
         assertThat(lv.getItems(), containsInAnyOrder(f1, f2, p1, p2));
         lv.setRecurse(true);
@@ -366,9 +387,11 @@ public class ListViewTest {
         @Override public ACL getRootACL() {
             return UNSECURED.getRootACL();
         }
+
         @Override public Collection<String> getGroups() {
             return Collections.emptyList();
         }
+
         @Override public ACL getACL(View item) {
             return new ACL() {
                 @Override public boolean hasPermission2(Authentication a, Permission permission) {
@@ -389,6 +412,7 @@ public class ListViewTest {
         public int read() throws IOException {
             return inner.read();
         }
+
         @Override
         public int read(byte[] b) throws IOException {
             return inner.read(b);
@@ -398,14 +422,17 @@ public class ListViewTest {
         public int read(byte[] b, int off, int len) throws IOException {
             return inner.read(b, off, len);
         }
+
         @Override
         public boolean isFinished() {
             throw new UnsupportedOperationException();
         }
+
         @Override
         public boolean isReady() {
             throw new UnsupportedOperationException();
         }
+
         @Override
         public void setReadListener(ReadListener readListener) {
             throw new UnsupportedOperationException();
