@@ -1,18 +1,18 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2010, Sun Microsystems, Inc., Kohsuke Kawaguchi, Yahoo! Inc.
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -21,6 +21,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.tasks;
 
 import static org.junit.Assert.assertEquals;
@@ -30,11 +31,7 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
-import com.gargoylesoftware.htmlunit.html.HtmlButton;
-import com.gargoylesoftware.htmlunit.html.HtmlForm;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
 import hudson.EnvVars;
-import hudson.model.Build;
 import hudson.model.Cause.LegacyCodeCause;
 import hudson.model.FreeStyleBuild;
 import hudson.model.FreeStyleProject;
@@ -42,7 +39,6 @@ import hudson.model.JDK;
 import hudson.model.ParametersAction;
 import hudson.model.ParametersDefinitionProperty;
 import hudson.model.PasswordParameterDefinition;
-import hudson.model.Result;
 import hudson.model.StringParameterDefinition;
 import hudson.model.StringParameterValue;
 import hudson.slaves.EnvironmentVariablesNodeProperty;
@@ -53,6 +49,7 @@ import hudson.tools.ToolProperty;
 import hudson.tools.ToolPropertyDescriptor;
 import hudson.util.DescribableList;
 import java.util.Collections;
+import java.util.Set;
 import javax.xml.transform.Source;
 import javax.xml.transform.stream.StreamSource;
 import jenkins.mvn.DefaultGlobalSettingsProvider;
@@ -60,6 +57,9 @@ import jenkins.mvn.DefaultSettingsProvider;
 import jenkins.mvn.FilePathGlobalSettingsProvider;
 import jenkins.mvn.FilePathSettingsProvider;
 import jenkins.mvn.GlobalMavenConfig;
+import org.htmlunit.html.HtmlButton;
+import org.htmlunit.html.HtmlForm;
+import org.htmlunit.html.HtmlPage;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.ExtractResourceSCM;
@@ -97,7 +97,7 @@ public class MavenTest {
         assertEquals("b.pom", m.pom);
         assertEquals("c=d", m.properties);
         assertEquals("-e", m.jvmOptions);
-	assertTrue(m.usesPrivateRepository());
+        assertTrue(m.usesPrivateRepository());
     }
 
     @Test public void withNodeProperty() throws Exception {
@@ -115,7 +115,7 @@ public class MavenTest {
         JDK varJDK = new JDK("varJDK", javaHomeVar);
         j.jenkins.getJDKs().add(varJDK);
         j.jenkins.getNodeProperties().replaceBy(
-                Collections.singleton(new EnvironmentVariablesNodeProperty(
+                Set.of(new EnvironmentVariablesNodeProperty(
                         new EnvironmentVariablesNodeProperty.Entry("VAR_MAVEN", mavenVar), new EnvironmentVariablesNodeProperty.Entry("VAR_JAVA",
                                 javaVar))));
 
@@ -123,10 +123,7 @@ public class MavenTest {
         project.getBuildersList().add(new Maven("--help", varMaven.getName()));
         project.setJDK(varJDK);
 
-        Build<?, ?> build = project.scheduleBuild2(0).get();
-
-        assertEquals(Result.SUCCESS, build.getResult());
-
+        j.buildAndAssertSuccess(project);
     }
 
     @Test public void withParameter() throws Exception {
@@ -134,7 +131,7 @@ public class MavenTest {
         String mavenHome = maven.getHome();
         String mavenHomeVar = "${VAR_MAVEN}" + mavenHome.substring(3);
         String mavenVar = mavenHome.substring(0, 3);
-        MavenInstallation varMaven = new MavenInstallation("varMaven",mavenHomeVar, JenkinsRule.NO_PROPERTIES);
+        MavenInstallation varMaven = new MavenInstallation("varMaven", mavenHomeVar, JenkinsRule.NO_PROPERTIES);
         j.jenkins.getDescriptorByType(Maven.DescriptorImpl.class).setInstallations(maven, varMaven);
 
         JDK jdk = j.jenkins.getJDK("default");
@@ -168,8 +165,8 @@ public class MavenTest {
         HtmlForm f = p.getFormByName("config");
         HtmlButton b = j.getButtonByCaption(f, "Add Maven");
         b.click();
-        j.findPreviousInputElement(b,"name").setValueAttribute("myMaven");
-        j.findPreviousInputElement(b,"home").setValueAttribute("/tmp/foo");
+        j.findPreviousInputElement(b, "name").setValue("myMaven");
+        j.findPreviousInputElement(b, "home").setValue("/tmp/foo");
         j.submit(f);
         verify();
 
@@ -182,14 +179,14 @@ public class MavenTest {
 
     private void verify() throws Exception {
         MavenInstallation[] l = j.get(MavenInstallation.DescriptorImpl.class).getInstallations();
-        assertEquals(1,l.length);
-        j.assertEqualBeans(l[0],new MavenInstallation("myMaven","/tmp/foo", JenkinsRule.NO_PROPERTIES),"name,home");
+        assertEquals(1, l.length);
+        j.assertEqualBeans(l[0], new MavenInstallation("myMaven", "/tmp/foo", JenkinsRule.NO_PROPERTIES), "name,home");
 
         // by default we should get the auto installer
-        DescribableList<ToolProperty<?>,ToolPropertyDescriptor> props = l[0].getProperties();
-        assertEquals(1,props.size());
+        DescribableList<ToolProperty<?>, ToolPropertyDescriptor> props = l[0].getProperties();
+        assertEquals(1, props.size());
         InstallSourceProperty isp = props.get(InstallSourceProperty.class);
-        assertEquals(1,isp.installers.size());
+        assertEquals(1, isp.installers.size());
         assertNotNull(isp.installers.get(MavenInstaller.class));
     }
 
@@ -202,16 +199,12 @@ public class MavenTest {
         );
         project.addProperty(pdb);
         project.setScm(new ExtractResourceSCM(getClass().getResource("maven-empty.zip")));
-        project.getBuildersList().add(new Maven("clean package",null));
+        project.getBuildersList().add(new Maven("clean package", null));
 
-        FreeStyleBuild build = project.scheduleBuild2(0).get();
-        @SuppressWarnings("deprecation")
-        String buildLog = build.getLog();
-        assertNotNull(buildLog);
-	    System.out.println(buildLog);
-        assertFalse(buildLog.contains("-Dpassword=12345"));
+        FreeStyleBuild build = j.waitForCompletion(project.scheduleBuild2(0).waitForStart());
+        j.assertLogNotContains("-Dpassword=12345", build);
     }
-    
+
     @Test
     public void parametersReferencedFromPropertiesShouldRetainBackslashes() throws Exception {
         final String properties = "global.path=$GLOBAL_PATH\nmy.path=$PATH\\\\Dir";
@@ -223,49 +216,39 @@ public class MavenTest {
         project.getBuildersList().add(new Maven("--help", null, null, properties, null,
                 false, null, null, true));
         project.addProperty(new ParametersDefinitionProperty(parameter));
-        j.jenkins.getNodeProperties().replaceBy(Collections.singleton(
+        j.jenkins.getNodeProperties().replaceBy(Set.of(
                 new EnvironmentVariablesNodeProperty(envVar)
         ));
 
-        FreeStyleBuild build = project.scheduleBuild2(0).get();
-        @SuppressWarnings("deprecation")
-        String buildLog = build.getLog();
-
-        assertNotNull(buildLog);
-        assertTrue(
-                "Parameter my.path should preserve backslashes in:\n" + buildLog,
-                buildLog.contains("-Dmy.path=C:\\Windows\\Dir")
-        );
-        assertTrue(
-                "Parameter global.path should preserve backslashes in:\n" + buildLog,
-                buildLog.contains("-Dglobal.path=D:\\Jenkins")
-        );
+        FreeStyleBuild build = j.waitForCompletion(project.scheduleBuild2(0).waitForStart());
+        j.assertLogContains("-Dmy.path=C:\\Windows\\Dir", build);
+        j.assertLogContains("-Dglobal.path=D:\\Jenkins", build);
     }
 
     @Test public void defaultSettingsProvider() throws Exception {
         {
             FreeStyleProject p = j.createFreeStyleProject();
             p.getBuildersList().add(new Maven("a", null, "a.pom", "c=d", "-e", true));
-    
+
             Maven m = p.getBuildersList().get(Maven.class);
             assertNotNull(m);
             assertEquals(DefaultSettingsProvider.class, m.getSettings().getClass());
             assertEquals(DefaultGlobalSettingsProvider.class, m.getGlobalSettings().getClass());
         }
-        
+
         {
             GlobalMavenConfig globalMavenConfig = GlobalMavenConfig.get();
             assertNotNull("No global Maven Config available", globalMavenConfig);
             globalMavenConfig.setSettingsProvider(new FilePathSettingsProvider("/tmp/settings.xml"));
             globalMavenConfig.setGlobalSettingsProvider(new FilePathGlobalSettingsProvider("/tmp/global-settings.xml"));
-            
+
             FreeStyleProject p = j.createFreeStyleProject();
             p.getBuildersList().add(new Maven("b", null, "b.pom", "c=d", "-e", true));
-            
+
             Maven m = p.getBuildersList().get(Maven.class);
             assertEquals(FilePathSettingsProvider.class, m.getSettings().getClass());
-            assertEquals("/tmp/settings.xml", ((FilePathSettingsProvider)m.getSettings()).getPath());
-            assertEquals("/tmp/global-settings.xml", ((FilePathGlobalSettingsProvider)m.getGlobalSettings()).getPath());
+            assertEquals("/tmp/settings.xml", ((FilePathSettingsProvider) m.getSettings()).getPath());
+            assertEquals("/tmp/global-settings.xml", ((FilePathGlobalSettingsProvider) m.getGlobalSettings()).getPath());
         }
     }
 
@@ -319,21 +302,21 @@ public class MavenTest {
 
         FreeStyleProject p = j.createFreeStyleProject();
         p.updateByXml((Source) new StreamSource(getClass().getResourceAsStream("MavenTest/doPassBuildVariablesOptionally.xml")));
-        String log = j.buildAndAssertSuccess(p).getLog();
+        FreeStyleBuild build = j.buildAndAssertSuccess(p);
         assertTrue("Build variables injection should be enabled by default when loading from XML", p.getBuildersList().get(Maven.class).isInjectBuildVariables());
-        assertTrue("Build variables should be injected by default when loading from XML", log.contains("-DNAME=VALUE"));
+        j.assertLogContains("-DNAME=VALUE", build);
 
         p.getBuildersList().clear();
         p.getBuildersList().add(new Maven("--help", maven.getName(), null, null, null, false, null, null, false/*do not inject*/));
 
-        log = j.buildAndAssertSuccess(p).getLog();
-        assertFalse("Build variables should not be injected", log.contains("-DNAME=VALUE"));
+        build = j.buildAndAssertSuccess(p);
+        j.assertLogNotContains("-DNAME=VALUE", build);
 
         p.getBuildersList().clear();
         p.getBuildersList().add(new Maven("--help", maven.getName(), null, null, null, false, null, null, true/*do inject*/));
 
-        log = j.buildAndAssertSuccess(p).getLog();
-        assertTrue("Build variables should be injected", log.contains("-DNAME=VALUE"));
+        build = j.buildAndAssertSuccess(p);
+        j.assertLogContains("-DNAME=VALUE", build);
 
         assertFalse("Build variables injection should be disabled by default", new Maven("", "").isInjectBuildVariables());
     }
@@ -346,16 +329,16 @@ public class MavenTest {
 
         p.getBuildersList().add(new Maven("--help", maven.getName(), null, properties, null, false, null,
                 null, false/*do not inject build variables*/));
-        String log = j.buildAndAssertSuccess(p).getLog();
-        assertTrue("Properties should always be injected, even when build variables injection is disabled",
-                log.contains("-DTEST_PROP1=VAL1") && log.contains("-DTEST_PROP2=VAL2"));
+        FreeStyleBuild build = j.buildAndAssertSuccess(p);
+        j.assertLogContains("-DTEST_PROP1=VAL1", build);
+        j.assertLogContains("-DTEST_PROP2=VAL2", build);
 
         p.getBuildersList().clear();
         p.getBuildersList().add(new Maven("--help", maven.getName(), null, properties, null, false, null,
                 null, true/*do inject build variables*/));
-        log = j.buildAndAssertSuccess(p).getLog();
-        assertTrue("Properties should always be injected, even when build variables injection is enabled",
-                log.contains("-DTEST_PROP1=VAL1") && log.contains("-DTEST_PROP2=VAL2"));
+        build = j.buildAndAssertSuccess(p);
+        j.assertLogContains("-DTEST_PROP1=VAL1", build);
+        j.assertLogContains("-DTEST_PROP2=VAL2", build);
     }
 
     @Issue("JENKINS-34138")
