@@ -40,6 +40,7 @@ import hudson.util.StreamTaskListener;
 import java.nio.charset.Charset;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.Issue;
@@ -53,7 +54,7 @@ public class InstallerTranslatorTest {
     @Test public void offlineNodeForJDK() throws Exception {
         Node slave = new DumbSlave("disconnected-slave", null, "/wherever", "1", Node.Mode.NORMAL, null, new JNLPLauncher(true), RetentionStrategy.NOOP, Collections.emptyList());
         String globalDefaultLocation = "/usr/lib/jdk";
-        JDK jdk = new JDK("my-jdk", globalDefaultLocation, Collections.singletonList(new InstallSourceProperty(Collections.singletonList(new CommandInstaller(null, "irrelevant", "/opt/jdk")))));
+        JDK jdk = new JDK("my-jdk", globalDefaultLocation, List.of(new InstallSourceProperty(List.of(new CommandInstaller(null, "irrelevant", "/opt/jdk")))));
         r.jenkins.getJDKs().add(jdk);
         FreeStyleProject p = r.createFreeStyleProject();
         p.setJDK(jdk);
@@ -69,16 +70,26 @@ public class InstallerTranslatorTest {
     @Test public void multipleSlavesAndTools() throws Exception {
         String jdk1Path = Functions.isWindows() ? "C:\\jdk1" : "/opt/jdk1";
         String jdk2Path = Functions.isWindows() ? "C:\\jdk2" : "/opt/jdk2";
-        Node slave1 = r.createSlave();
-        Node slave2 = r.createSlave();
-        JDK jdk1 = new JDK("jdk1", null, Collections.singletonList(new InstallSourceProperty(Collections.singletonList(Functions.isWindows() ? new BatchCommandInstaller(null, "echo installed jdk1", jdk1Path) : new CommandInstaller(null, "echo installed jdk1", jdk1Path)))));
-        JDK jdk2 = new JDK("jdk2", null, Collections.singletonList(new InstallSourceProperty(Collections.singletonList(Functions.isWindows() ? new BatchCommandInstaller(null, "echo installed jdk2", jdk2Path) : new CommandInstaller(null, "echo installed jdk2", jdk2Path)))));
+        JDK jdk1 = new JDK(
+                "jdk1",
+                null,
+                List.of(new InstallSourceProperty(List.of(
+                        Functions.isWindows()
+                                ? new BatchCommandInstaller(null, "echo installed jdk1", jdk1Path)
+                                : new CommandInstaller(null, "echo installed jdk1", jdk1Path)))));
+        JDK jdk2 = new JDK(
+                "jdk2",
+                null,
+                List.of(new InstallSourceProperty(List.of(
+                        Functions.isWindows()
+                                ? new BatchCommandInstaller(null, "echo installed jdk2", jdk2Path)
+                                : new CommandInstaller(null, "echo installed jdk2", jdk2Path)))));
         r.jenkins.getJDKs().add(jdk1);
         r.jenkins.getJDKs().add(jdk2);
         FreeStyleProject p = r.createFreeStyleProject();
         p.setJDK(jdk1);
         p.getBuildersList().add(Functions.isWindows() ? new BatchFile("echo %JAVA_HOME%") : new Shell("echo $JAVA_HOME"));
-        p.setAssignedNode(slave1);
+        p.setAssignedNode(r.createSlave());
         FreeStyleBuild b1 = r.buildAndAssertSuccess(p);
         r.assertLogContains("installed jdk1", b1);
         r.assertLogContains(jdk1Path, b1);
@@ -90,7 +101,7 @@ public class InstallerTranslatorTest {
         // An installer is run for every build, and it is up to a CommandInstaller configuration to do any up-to-date check.
         r.assertLogContains("installed jdk2", b3);
         r.assertLogContains(jdk2Path, b3);
-        p.setAssignedNode(slave2);
+        p.setAssignedNode(r.createSlave());
         FreeStyleBuild b4 = r.buildAndAssertSuccess(p);
         r.assertLogContains("installed jdk2", b4);
         r.assertLogContains(jdk2Path, b4);
@@ -110,7 +121,7 @@ public class InstallerTranslatorTest {
         final BatchCommandInstaller bci = new BatchCommandInstaller("wrong2", "echo hello", "/opt/jdk2");
         InstallSourceProperty isp = new InstallSourceProperty(Arrays.asList(ci, bci));
 
-        JDK jdk = new JDK("jdk", null, Collections.singletonList(isp));
+        JDK jdk = new JDK("jdk", null, List.of(isp));
         r.jenkins.getJDKs().add(jdk);
 
 
@@ -133,7 +144,7 @@ public class InstallerTranslatorTest {
                 : new CommandInstaller("built-in", "echo hello", "/opt/jdk2");
         InstallSourceProperty isp = new InstallSourceProperty(Arrays.asList(ci, ci2));
 
-        JDK jdk = new JDK("jdk", null, Collections.singletonList(isp));
+        JDK jdk = new JDK("jdk", null, List.of(isp));
         r.jenkins.getJDKs().add(jdk);
 
 
