@@ -21,7 +21,7 @@ import hudson.util.ProcessTreeRemoting.IOSProcess;
 import java.io.File;
 import java.io.IOException;
 import java.io.StringWriter;
-import java.util.Collections;
+import java.util.Map;
 import org.junit.After;
 import org.junit.Assume;
 import org.junit.Rule;
@@ -56,12 +56,11 @@ public class ProcessTreeTest {
         project.getBuildersList().add(new Maven("install", "maven"));
 
         // build the project, wait until tests are running, then cancel.
-        project.scheduleBuild2(0).waitForStart();
+        FreeStyleBuild b = project.scheduleBuild2(0).waitForStart();
 
-        FreeStyleBuild b = project.getLastBuild();
         b.doStop();
 
-        Thread.sleep(1000);
+        j.waitForCompletion(b);
 
         // will fail (at least on windows) if test process is still running
         b.getWorkspace().deleteRecursive();
@@ -84,7 +83,7 @@ public class ProcessTreeTest {
 
         sleepProject.getBuildersList().add(new Shell("nohup sleep 100000 &"));
 
-        j.assertBuildStatusSuccess(sleepProject.scheduleBuild2(0).get());
+        j.buildAndAssertSuccess(sleepProject);
 
         processJob.getBuildersList().add(new Shell("ps -ef | grep sleep"));
 
@@ -137,13 +136,13 @@ public class ProcessTreeTest {
         if (File.pathSeparatorChar == ';') {
             pb.command("cmd");
         } else {
-            pb.command("sleep", "5m");
+            pb.command("sleep", "300");
         }
 
         process = pb.start();
 
         ProcessTree processTree = ProcessTree.get();
-        processTree.killAll(Collections.singletonMap("cookie", "testKeepDaemonsAlive"));
+        processTree.killAll(Map.of("cookie", "testKeepDaemonsAlive"));
         assertThrows("Process should have been excluded from the killing", IllegalThreadStateException.class, () -> process.exitValue());
     }
 
@@ -161,7 +160,7 @@ public class ProcessTreeTest {
         if (File.pathSeparatorChar == ';') {
             pb.command("cmd");
         } else {
-            pb.command("sleep", "5m");
+            pb.command("sleep", "300");
         }
 
         // Create an agent so we can tell it to kill the process
@@ -173,7 +172,7 @@ public class ProcessTreeTest {
 
         // Call killall (somewhat roundabout though) to (not) kill it
         StringWriter out = new StringWriter();
-        s.createLauncher(new StreamTaskListener(out)).kill(Collections.singletonMap("cookie", "testKeepDaemonsAlive"));
+        s.createLauncher(new StreamTaskListener(out)).kill(Map.of("cookie", "testKeepDaemonsAlive"));
 
         assertThrows("Process should have been excluded from the killing", IllegalThreadStateException.class, () -> process.exitValue());
     }
